@@ -9,7 +9,8 @@ January 23, 2011
 #1036012 by troky: Fixed extra space in default style name.
 #1020190 by troky: Fixed undefined index from passing language into request for node's terms for multi-language site.
 #1030130 by troky: Fixed undefined index error in active_topics view.
-NOISSUE by troky: Re-exported common views (except those used by NC)
+NOISSUE by troky: Re-exported common views (except those used by NC).
+#1023078 by troky: Fixed undefined variables in post preview.
 
 January 21, 2011
 ----------------
